--- a/0-intro.tex
+++ b/0-intro.tex
@@ -4,7 +4,10 @@
 \chapter*{General introduction}
 \pagenumbering{arabic}
 
-Nanoporous materials are material 
+\todo{Gas separation of xenon/krypton}
+
+\todo{Gas separation of xenon/krypton}
+
 
 \todo{Just a copy paste from last article}
 
