--- a/1-screening.tex
+++ b/1-screening.tex
@@ -33,9 +33,10 @@ The process of sticking particles or molecules on a surface is called adsorption
     \includegraphics[height=0.7\textwidth]{figures/1-screening/Isotherm_KAXQIL_gcmc_uff.pdf}
     \caption{Theoretical calculation}
   \end{subfigure}
-  \caption{Illustration of monocomponent adsorption isotherms of Xe and Kr obtained experimentally (a) and calculated by GCMC calculations (b). The experimental data are made available by the authors of the Ref.~\cite{Banerjee_2016}. }\label{isotherm}
+  \caption{Illustration of monocomponent adsorption isotherms of Xe and Kr obtained experimentally (a) and calculated by GCMC calculations (b). The experimental data are made available\textsuperscript{1} by the authors of the Ref.~\cite{Banerjee_2016}. }\label{isotherm}
 \end{figure}
 
+\footnotetext[1]{on Github at \url{https://github.com/CorySimon/XeKrMOFAdsorptionSurv}}
 %pore size
 Most of the materials studied during my thesis have pores with a size around the nanometer, therefore called ``nanopores''. The International Union of Pure Applied Chemistry (IUPAC) classifies these pores into three categories according to their size: micropores ($\leq$\SI{2}{\nano\meter}), mesopores (\SI{2}{\nano\meter}--\SI{50}{\nano\meter}) and macropores ($>$\SI{50}{\nano\meter}).\autocite{Sing_1985} Here, I will use a single terminology (nanopore) to designate all pores of under a few nanometers. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\autocite{Yan_2020} The pore size distribution (PSD) can be computationally determined if the structure of the nanoporous material is already resolved using X-ray diffraction on crystallized porous solids. This is the most accurate determination method of the PSD, but it relies on considering that the structure is perfectly rigid and crystalline so that only one structural data can characterize it. Other experimental methods rely on assumptions, model systems (e.g., cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can evaluate the PSD.\autocite{Haynes_1973} The Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\autocite{Radlinski_2004} In my thesis, I will mainly rely on computationally analyzing experimental structures resolved by X-ray to deduce pore sizes and other geometrical characteristics. 
 
@@ -350,7 +351,7 @@ The chemical nature of the cavities was best described using the Voronoi energy 
 Despite the progress made, important drawbacks of the current methodologies remain. High-throughput screenings rely too much on oversimplified assumptions such as the rigidity of the framework, the absence of defects, the use of Lennard-Jones potentials and inaccurate charges. For instance, the rigidity of the framework only takes into account one conformation of the framework. Yet, thermal agitation induces a ``breathing'' movement of the framework with an amplitude dependent on its intrinsic flexibility. The pores of the framework can change depending on the number of adsorbates to interact more optimally with them, which can be induced by a change in pressure. The issue of flexibility is rarely tackled, and when considered, it is only on the few most selective structures given by an inaccurate screening based on the rigid crystal approximation. One can wonder about the results obtained if it is applied to larger sets of structures. Witman et al.\ found that flexibility applied to top performing materials can decrease the selectivity, because the pore does not have an optimal size anymore.\autocite{Witman_2017} In some cases, the selectivity of a well-performing material can even increase to become a top performing one. Computational screenings can be closer to predict experimental values of selectivity, diffusivity, and other key performance metrics.
 
 %Diffusion
-Many open problems remain for the design of efficient high-throughput computational screenings. The connection between different properties for a given application is not systematically integrated in the screening procedures. For example, in methane storage, the working capacity of the material is the main property to optimize, but the kinetics of the adsorption/desorption or the mechanical resistance to compaction among others also need to be considered. Designing a nanoporous material is in fact a multivariate optimization problem with tacit constraints (e.g. synthesizability) --- a material for industrial xenon/krypton separation we need not only to optimize the selectivity but also the regenerability (how much gas can be retrieved at each cycle) and the capacity and so on, and the a key constraint is to know if it is synthesizable or the robustness within the industrial conditions. For instance, although the transport properties of the adsorbates in the material are not key in explaning the separation performance, they are, however, very important in the breakthrough experiments and eventually in the industrial separation process in pressure or temperature swing adsorption beds. For this reason, studying transport properties along with uptake capacities and thermodynamic selectivity of the xenon/krypton separation can give a more complete picture of the industrial process we ultimately want to model. 
+Many open problems remain for the design of efficient high-throughput computational screenings. The connection between different properties for a given application is not systematically integrated in the screening procedures. For example, in methane storage, the working capacity of the material is the main property to optimize, but the kinetics of the adsorption/desorption or the mechanical resistance to compaction among others also need to be considered. Designing a nanoporous material is in fact a multivariate optimization problem with tacit constraints (e.g. synthesizability) --- a material for industrial xenon/krypton separation \todo{}we need not only to optimize the selectivity but also the regenerability (how much gas can be retrieved at each cycle) and the capacity and so on, and the a key constraint is to know if it is synthesizable or the robustness within the industrial conditions. For instance, although the transport properties of the adsorbates in the material are not key in explaning the separation performance, they are, however, very important in the breakthrough experiments and eventually in the industrial separation process in pressure or temperature swing adsorption beds. For this reason, studying transport properties along with uptake capacities and thermodynamic selectivity of the xenon/krypton separation can give a more complete picture of the industrial process we ultimately want to model. 
 
 %Polarization
 Moreover, the transferability of the methodology to a broad range of materials is often achieved at the expense of accuracy in specific cases. And one can rightly question the universality of depending on faster but less elaborated models, which boils down to a trade-off problem between prediction accuracy and computational cost (or complexity). For instance, classical forcefields are broadly used in rigid materials for adsorption properties, but the switch to more costly \emph{ab initio} methods or the addition of flexibility can result in a more accurate description at the expense of computational resources. The addition of polarization could be very promising since several top performing materials harbor open metal sites and highly polar sites that explain the acute affinity to xenon adsorbates. 
