--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -288,12 +288,12 @@ As shown in the previous chapter, the computational screening of the nanoporous 
 
 \subsection{Structure--selectivity relationships}\label{sct:geometry}
 
-An adsorption separation process is primarily characterized by a pivotal performance metric, called the selectivity defined in equations~\ref{eq:selec} and~\ref{eq:selec_0}. By comparing this selectivity to geometrical descriptors calculated by the Zeo++ software,\autocite{Zeo++} I want to characterize the materials that will most likely be selective for a separation of a 20:80 Xe/Kr mixture (to compare with most literature screenings on a mixture extracted from the air). Three structural descriptors have been calculated: the accessible surface area of a \ce{N2}-sized probe of \SI{1.2}{\angstrom}, the void fraction occupiable by a \SI{2.0}{\angstrom} radius probe (roughly the size of a xenon),\autocite{vol_Ongari2017} and the diameter of the largest included sphere (D$_i$) using specially designed atom radii. Inspired by a recent work on the comparison of pore limiting diameters and self-diffusion coefficients,\autocite{Hung_2021} I defined a list of van der Waals radii to be read by the Zeo++ software (more details in \url{https://github.com/eren125/zeopp_radtable}). All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k\e{B} T/2$, for $T = \SI{298}{\kelvin}$.
+An adsorption separation process is primarily characterized by a pivotal performance metric, called the selectivity defined in equations~\ref{eq:selec} and~\ref{eq:selec_0}. By comparing this selectivity to geometrical descriptors calculated by the Zeo++ software,\autocite{Zeo++} I want to characterize the materials that will most likely be selective for a separation of a 20:80 Xe/Kr mixture (to compare with most literature screenings on a mixture extracted from the air). Three structural descriptors have been calculated: the accessible surface area of a \ce{N2}-sized probe of \SI{1.2}{\angstrom}, the void fraction occupiable by a \SI{2.0}{\angstrom} radius probe (roughly the size of a xenon),\autocite{vol_Ongari2017} and the diameter of the largest included sphere (D$_i$) using specially designed atom radii. Inspired by a recent work on the comparison of pore limiting diameters and self-diffusion coefficients,\autocite{Hung_2021} I defined a list of van der Waals radii to be read by the Zeo++ software\footnote[1]{More details at \url{https://github.com/eren125/zeopp_radtable}}. All Zeo++ calculations use an atomic radius that corresponds to the distance where the LJ potential reaches $3 k\e{B} T/2$, for $T = \SI{298}{\kelvin}$.
 
 \subsubsection{Xenon uptake and selectivity}
 
 Before digging deeper in the structure--selectivity relationship, I will describe the relation between the xenon uptake (the number of adsorbed xenon in the GCMC simulation) and the selectivity at \SI{1}{\atm}. For instance, the xenon uptake could also be very important in a separation process, because it defines the working capacity of xenon produced by adsorption/desorption cycles. According to the Figures~\ref{fgr:sa} and~\ref{fgr:vol}, first high xenon uptakes are associated with a high selectivity, but at some point very high selectivity is associated to lower uptakes. There seem to be an area where materials have selectivity over $100$ and Xe uptake around \SI{3}{\milli\mole\per\gram}, whereas an uptake over \SI{6}{\milli\mole\per\gram} can only be obtained for a selectivity between $10$ and $20$. One cannot maximize both uptake and selectivity metrics at the same time, a trade-off needs to be made when designing nanoporous materials for xenon/krypton separation.\autocite{Zhang_2022} Different strategies have been implemented to optimize both metrics using mixed metrics such as the adsorbent performance score (APS).\autocite{Solanki_2020}
-This trade-off can be rationalized by using the different structural descriptors (pore size, surface area and volume) I presented earlier. 
+This trade-off can be rationalized by using the different structural descriptors (pore size, surface area and volume) presented earlier. 
 
 \begin{figure}[ht]
   \centering
@@ -386,7 +386,7 @@ Finally, the composition does not affect the previously determined structural ch
 
 \subsection{Thermodynamic quantities correlations at infinite dilution}
 
-In this section, the goal is not directly to address the structure--property relationships, but rather to map out the details of the thermodynamic features of Xe/Kr adsorption and separation in nanoporous materials. I used the high-throughput screening methodology as a way to map out the space of thermodynamic properties, going beyond the usual quantities of selectivity and uptake, to focus more specifically on the role of adsorption enthalpy and entropy, the differences between Xe and Kr adsorption thermodynamics, and between selectivity at low and high pressure. The discussion below is based on a work published in the Faraday Discussions Ref.~\cite{Ren_2021} and the related data can be found at \url{github.com/fxcoudert/citable-data/tree/master/132-Ren_FaradayDiscuss_2021}.
+In this section, the goal is not directly to address the structure--property relationships, but rather to map out the details of the thermodynamic features of Xe/Kr adsorption and separation in nanoporous materials. I used the high-throughput screening methodology as a way to map out the space of thermodynamic properties, going beyond the usual quantities of selectivity and uptake, to focus more specifically on the role of adsorption enthalpy and entropy, the differences between Xe and Kr adsorption thermodynamics, and between selectivity at low and high pressure. The discussion below is based on a work published\footnote[1]{The related data can be found at \url{https://github.com/fxcoudert/citable-data/tree/master/132-Ren_FaradayDiscuss_2021}} in the Faraday Discussions Ref.~\cite{Ren_2021}.
 
 To evaluate the performance of a given nanoporous material for separation in the low loading (or low pressure) limit, Henry's constants are often calculated from linear fits of low-pressure adsorption isotherm data --- both experimentally and computationally. In this section, I investigate the thermodynamics of Xe and Kr adsorption at low pressure. Here, I have calculated the low-pressure adsorption properties by using the Widom insertion method\autocite{Widom1963, frenkel2001widom} on 9,668 structures from the dataset selected. It has higher accuracy than the fitting of isotherms, where it can be difficult to know what the extent of the linear adsorption regime is. With these simulations, I could obtain for each material the Henry's constant $K$ and the adsorption enthalpy $\Delta\e{ads}H\e{0}$ (at the zero loading limit) for both xenon and krypton. The Xe/Kr thermodynamic selectivity $s\e{0}$ in the low-pressure limit is then determined by the ratio $s\e{0} = K\ex{Xe}/K\ex{Kr}$ of the Henry's constants for the two gases. In the following discussion, I will look at the statistical relationships between the thermodynamic quantities at low pressure: $s\e{0}$, $K\ex{Xe}$, $K\ex{Kr}$, $\Delta\e{ads}H\e{0}\ex{Xe}$, $\Delta\e{ads}H\e{0}\ex{Kr}$ and $\Delta\e{exc}H\e{0}$.
 
