--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -381,9 +381,9 @@ The algorithm performs very well on the most adsorptive materials with xenon ads
 
 To further extend the possible uses cases of the RAESS algorithm, I tested the RAESS algorithm on the amorphous database~\autocite{Thyagarajan_2020}. The algorithm found results for 176 structures out of 196. The RASPA2 software was not able to run on these amorphous structures with our computers, running out of memory due to the large system size: therefore, there is no comparison point with a Widom simulation. However, I used another simulation that is closer to the ground truth since it samples a homogeneously distributed grid using an optimized algorithm I will present in the next section. This grid sampling managed to compute the adsorption energies of 175 structures. 
 
-The Table~\ref{tab:amorphous} gives the values of the adsorption enthalpies and the Henry constants of a few amorphous materials as well as the time they took to be computed. The sheer number of atoms in each structure makes the CPU time required much higher than for the crystalline structures of CoRE MOF 2019. The time required are, however, quite manageable in a hypothetical screening procedure. If I consider all the 175 structures that could be calculated by our methods, the average time required is about \SI{75}{\second} per structure. 
+The Table~\ref{tab:amorphous} gives the values of the adsorption enthalpies and the Henry constants of a few amorphous materials as well as the time they took to be computed. The sheer number of atoms in each structure makes the CPU time required much higher than for the crystalline structures of CoRE MOF 2019. The time required are, however, quite manageable in a hypothetical screening procedure. If I consider all the 175 structures that could be calculated by our methods, the average time required is about \SI{75}{\second} per structure. The detailed data is available in csv format 
 
-\begin{table}[hb]
+\begin{table}[ht]
   \setlength{\extrarowheight}{1pt}
   \centering
   \begin{tabular}{|l|r|r|r|}
@@ -399,25 +399,25 @@ The Table~\ref{tab:amorphous} gives the values of the adsorption enthalpies and 
     \caption{Some amorphous materials' performance according to the RAESS algorithm. The results on the whole amorphous database is given in CSV format on the Github: \url{github.com/fxcoudert/citable-data/tree/master/154-Ren_ChemSci_2023}.}\label{tab:amorphous}
 \end{table}
 
-As shown on Figure~\ref{fgr:amorphous}, the accuracy of the surface sampling is rather high since by comparing it to an unbiased grid-based sampling, I obtain very similar results. The RMSE is about \SI{0.83}{\kJ\per\mol}, which is higher than the one for CoRE MOF structures. This method could very likely be used to evaluate amorphous materials as a fast screening tool especially since the computation time required by the optimized grid sampling is about \SI{623}{\second}. The dimension reduction inherent to the surface sampling makes it one order of magnitude faster than conventional techniques.
-
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.5\linewidth]{figures/3-fastsim/amorphous_enthalpy.pdf}
   \caption{Scatterplot comparison of the xenon adsorption enthalpy calculated by the RAESS algorithm and the one calculated by a grid sampling (presented in the next section) on a database of porous rigid amorphous materials~\autocite{Thyagarajan_2020}. RASPA2 simulation could not be run on this database. Only the 175 structures computed by both methods are presented here. }\label{fgr:amorphous}
 \end{figure}
 
+As shown on Figure~\ref{fgr:amorphous}, the accuracy of the surface sampling is rather high since by comparing it to an unbiased grid-based sampling, I obtain very similar results. The RMSE is about \SI{0.83}{\kJ\per\mol}, which is higher than the one for CoRE MOF structures. This method could very likely be used to evaluate amorphous materials as a fast screening tool especially since the computation time required by the optimized grid sampling is about \SI{623}{\second}. The dimension reduction inherent to the surface sampling makes it one order of magnitude faster than conventional techniques.
+
+
+
 \subsection{Perspectives of surface sampling}
 
-I described a novel algorithm for the high-speed calculation of adsorption enthalpy in nanoporous materials, that takes a unique approach to reduce the sampling necessary. This new algorithm is based on the core principle of dimensional reduction, from a volume problem to a surface one. The algorithm is proven to be significantly faster than the reference Widom insertion (random sampling of porous space). Moreover, the error associated is found to be of the order of \SI{0.4}{\kilo\joule\per\mole}, tested throughout the entire CoRE MOF 2019 database, for xenon adsorption. Even when compared to existing very fast sampling techniques such as the Voronoi sampling, this surface sampling technique requires similar CPU time, combined with a better accuracy. 
+I described a novel algorithm for the high-speed calculation of adsorption enthalpy in nanoporous materials,\footnote[1]{The code is made available on the group's GitHub (\url{github.com/coudertlab/RAESS}), where further development will be released.} that takes a unique approach to reduce the sampling necessary. This new algorithm is based on the core principle of dimensional reduction, from a volume problem to a surface one. The algorithm is proven to be significantly faster than the reference Widom insertion (random sampling of porous space). Moreover, the error associated is found to be of the order of \SI{0.4}{\kilo\joule\per\mole}, tested throughout the entire CoRE MOF 2019 database, for xenon adsorption. Even when compared to existing very fast sampling techniques such as the Voronoi sampling, this surface sampling technique requires similar CPU time, combined with a better accuracy.\footnote[1]{All data shown in this section is available at \url{https://github.com/fxcoudert/citable-data/tree/master/154-Ren_ChemSci_2023}} 
 
 Based on these results, this algorithm has important potential for applications in the current computational analysis workflows of material databases, such as high-throughput screening studies. For instance, this algorithm can be used to get a fast approximation of the low-loading adsorption enthalpy of a molecule inside nanoporous materials. This cheap evaluation of the enthalpy can be used to screen out the structures with little affinity with the targeted adsorbate molecule. It can also be used as a thermodynamic descriptor for selectivity prediction in a machine learning model, as done by Simon et al.\autocite{Simon_2015} The computational speedup brought by this novel methodology can also enable the screening of materials databases at larger scale in the future.
 
 I note, moreover, that the speed of our method resides in the sampling technique itself, rather than in the actual energy calculation. While I have benchmarked it in this work for a simple Lennard-Jones interaction potential, this sampling technique could equally be used to speed up samplings of space based on more expensive modeling strategies, including polarizable force fields or density functional theory (DFT) calculations. In the literature, the need for cheap \emph{ab initio} grade thermodynamic properties is usually fulfilled by using an importance sampling method based on a classical force field.\autocite{Vandenbrande2018} In our method, the description of surface sampling is independent of any force field, and the sampling spheres can be defined according to kinetic radius, van der Waals radius or any other physically relevant distance. {Consequently, given a definition of atomic radii, it is possible to define a surface on which to carry out other types of simulations such as neural network potential, DFT or any other force fields. Although the accuracy or relevance of such a sampling remains an open question, the approach will undeniably speed up the simulations.} This could even be applied to calculate adsorption enthalpies while considering intrinsic structure flexibility,\autocite{Witman_2017} a task whose main drawback is the high computation time required. Since surface sampling is hundreds of times faster than standard methodologies, I could use hundreds of snapshots in a flexibility-aware calculation.
 
-Finally, although the algorithm in its present form can already be applied in a wide range of applications, additional development work could allow us to generalize it to polyatomic adsorbates. For instance, I would need to {work on a definition of the molecular radius for non-spherical adsorbates as well as working} all the orientation conformation of the adsorbent. {I could imagine making the distance to the surface depend on the orientation of the adsorbate or sample a band volume on the surface. Although the best implementation of the surface sampling for polyatomic adsorbates remains an open question, in theory it should be possible to apply it to more complex adsorbates than the spherical noble gas. } This would add more complexity to the algorithm but would not change the fundamental speedup due to surface sampling, since these orientation moves are also performed in other standard methodologies. To improve even more the accuracy, we could test hybrid samplings with multiple sampling spheres, or a combination of Voronoi nodes and sampling spheres. Another idea could be to have fractions of spheres that are oriented toward the center of the pore given by the Voronoi node. In theory, having a wider variety of sampling points can only improve the sampling. There are therefore multiple possible sampling techniques that could be built around the method introduced herein. {The code is made freely available on the group's GitHub (\url{github.com/coudertlab/RAESS}), where further development will be released.}
-
-\textbf{Data Availability:} \url{https://github.com/fxcoudert/citable-data/tree/master/154-Ren_ChemSci_2023}
+Finally, although the algorithm in its present form can already be applied in a wide range of applications, additional development work could allow us to generalize it to polyatomic adsorbates. For instance, I would need to {work on a definition of the molecular radius for non-spherical adsorbates as well as working} all the orientation conformation of the adsorbent. {I could imagine making the distance to the surface depend on the orientation of the adsorbate or sample a band volume on the surface. Although the best implementation of the surface sampling for polyatomic adsorbates remains an open question, in theory it should be possible to apply it to more complex adsorbates than the spherical noble gas. } This would add more complexity to the algorithm but would not change the fundamental speedup due to surface sampling, since these orientation moves are also performed in other standard methodologies. To improve even more the accuracy, we could test hybrid samplings with multiple sampling spheres, or a combination of Voronoi nodes and sampling spheres. Another idea could be to have fractions of spheres that are oriented toward the center of the pore given by the Voronoi node. In theory, having a wider variety of sampling points can only improve the sampling. There are therefore multiple possible sampling techniques that could be built around the method introduced herein. 
 
 \section{Grid Adsorption Energies Descriptors (GrAED)}\label{sct:grid}
 
