--- a/4-ml.tex
+++ b/4-ml.tex
@@ -397,7 +397,7 @@ By combining the above-mentioned features with more standard geometrical descrip
   \caption{Description of geometrical and chemical features used in the ML model.}\label{tab:geom_descriptors}
   \end{table}
 
-\footnotetext{\textsuperscript{1}Using the approach of Ref.~\cite{Hung_2021}}
+\footnotetext[1]{Using the approach of Ref.~\cite{Hung_2021}}
 \clearpage
 
   \begin{table}[ht]
