--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -3,14 +3,23 @@
 
 \chapter*{General conclusions}
 
-In this thesis, I explored different approaches to find the best nanoporous materials for adsorption-based industrial xenon/krypton separation (e.g., pressure-swing adsorption). As highlighted in our literature review, a high-throughput screening focus on one specific property of the nanoporous material in order to find the best material for a targeted application. There are three main challenges for screenings: (i) the accuracy of the methods used to characterize the key properties at play, (ii) the experimental/computation time required to determine those properties, and (iii) the 
+In this thesis, I explored different approaches to find the best nanoporous materials for adsorption-based industrial xenon/krypton separation (e.g., pressure-swing adsorption). As highlighted in our literature review, a high-throughput screening focus on one specific property of the nanoporous material in order to find the best material for a targeted application. There are three main challenges for screenings: (i) the accuracy of the methods used to characterize the key properties at play, (ii) the experimental/computation time required to determine those properties, and (iii) other properties that are often neglected can be added to the evaluation of the performance. For instance, to evaluate the separation performance, one usually uses the adsorption selectivity. 
+
+In the chapter 2, I showed different methodologies to evaluate this selectivity in different physical conditions, and how a screening can draw a portait of a selective material. In the chapter 3, I introduced faster sampling techniques to evaluate the selectivity in the infinite-dilution case; these techniques can be used in a multi-scale screening to faster single out interesting materials for more time-consuming calculations or experiments. To get a GCMC level of accuracy combined with a speed comparable with faster low-dilution calculations, in the chapter 4, I proposed an ML-based approach. The thermodynamic properties calculated under very simplistic assumptions has been thoroughly studied using multiple correlation analysis and the development of multiple performance evaluation tools.
+
+Finally, to take account of different key properties, I studied the the transport properties in the chapter 5. Different methodologies were explored: (i) the most physically accurate but also the slowest method is based on molecular dynamics of at least a few tens of nanoseconds; (ii) the transition state based methodologies that approximate the diffusion process by hoppings from one site to another; (iii) Finally the ML-based method that uses some descriptors based on activation energies (transition state theory) to predict the diffusion coefficient. Using these calculated transport properties, the screening uncovered selective materials without kinetic limitations (that also happens to have high xenon capacity), which confirms the multivariate nature of the screening process since these type of materials would be much more productive with more output at each pressure-swing cycle and also faster cycles (in a PSA process). Other properties that were neglected such as the flexibility of the material or the interactions induced by charged atoms or polar groups have a non-negligible effect on the real separation performance. These effects should be directly integrated in a screening to identify materials with much higher experimental selectivity as suggested by the characteristics of the recent top performing materials for Xe/Kr separation.\autocite{Li_2019,Pei_2022} 
 
  
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
 \end{center}
 
-This work opens perspectives for 
+
+This work opens perspectives for faster screening strategies of separation properties in different physical and chemical conditions. Moreover, the different tools developed in this thesis can be used to easily integrate transport properties in future screening for gas separation in nanoporous materials.
+
+The different methodologies developed also enable the integration of under-studied properties that have a key role in the industrial process of xenon/krypton separation. By combing the speed-up methods that I introduced throughout this thesis, it is now possible to integrate much more complex phenomena in the screening procedure. The faster sampling of the adsorption energies can serve as building ground to add in the flexibility phenomenon through a snapshot approach\autocite{Witman_2017}. The evaluation of the induced energy\autocite{Lachet_1998} can also be integrated in the scheme I developed throughout this thesis. 
+
+
 
 \vfill
 \begin{center}
